projekt/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    name: backend-deployment

spec:
  selector:
    matchLabels:
      name: backend-pod

  replicas: 2
  template:
    metadata:
      labels:
        name: backend-pod

    spec:
      containers:
      - name: backend
        image: ipustovoy/technologie-chmurowe:backend
