projekt/k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    name: backend-service
    
spec:
  selector:
    name: backend-pod
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
