projekt/k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    name: frontend-service

spec:
  selector:
    name: frontend-pod
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
