projekt/k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    name: mongo-service

spec:
  selector:
    name: mongo-pod
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
