projekt/k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    name: redis-service

spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
